@@ -6,6 +6,7 @@ Change log 0.8
 * Fixed the error message when a constructor is not found is wrong when using mocked values when using mockMethod.
 * WhiteBox invoke method and invoke constructor methods now throws an IllegalArgumentException if the first argument is null.
 * Replay/verify works as expected when mixing classes and instance mocks.
+* Better error message when expectNew fails due to too many calls to new when a method was invoked using reflection.
                              
 Change log 0.7
 --------------
